--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           ><span style="color: #000000">Studio</span></a
         >
 
-        <nav>
+        <nav class="nav">
           <a class="link__page link-nav__underline" href="index.html"
             >Agnecja</a
           >
@@ -38,25 +38,17 @@
           <a class="link__page" href="portfolio.html">Portfolio</a>
 
           <a class="link__page" href="#kontakt">Kontakt</a>
-          <div class="js-menu__box-flex">
-            <a href="./index.html" class="js-menu__link js-menu__link--current js-menu__link--top js-menu__link--bottom">Agencja</a>
-            <a href="./portfolio.html" class="js-menu__link js-menu__link--bottom">Portfolio</a>
-            <a href="#" class="js-menu__link">Kontakt</a>
-            <a href="tel:+48111111111" class="js-menu__link-second js-menu__link-second--backlight js-menu__link-second--top">+48 111 111 111</a>
-            <a href="mailto:info@devstudio.com" class="js-menu__link-second">info@devstudio.com</a>
+          <div class="js-menu-container">
+            <a href="./index.html">Agencja</a>
+            <a href="./portfolio.html">Portfolio</a>
+            <a href="#">Kontakt</a>
+            <a href="tel:+48111111111">+48 111 111 111</a>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <button type="button" class="js-close-menu">X</button>
-        </div>
-        <div class="js-menu__socials">
-            <span class="js-menu__socials--social-media">Instagram</span><span class="js-menu__socials--line">|</span>
-            <span class="js-menu__socials--social-media">Twitter</span><span class="js-menu__socials--line">|</span>
-            <span class="js-menu__socials--social-media">Facebook</span><span class="js-menu__socials--line">|</span>
-            <span class="js-menu__socials--social-media">LinkedIn</span>
-        </div>
-    </div>
-    <svg width="24" height="24" class="js-menu__icon js-open-menu">
-        <use href="./images/icons.svg#icon-menu"></use>
-    </svg>
+          </div>
         </nav>
+        <div class="js-open-menu">open</div>
+
         <div class="header__contact">
           <a class="link link--contact" href="mailto:info@devstudio.com">
             <svg class="contact__icon" width="200" height="12">
@@ -176,7 +168,6 @@
                   alt="graphic_designer"
                   width="370"
                   height="294"
-
                 />
               </figure>
             </li>
@@ -373,9 +364,8 @@
       </section>
       <section class="clients">
         <div class="clients__container">
+          <h2 class="clients__paragraf">Nasi klienci</h2>
           <div class="clients__wrapper">
-            <h2 class="section__paragraf">Nasi klienci</h2>
-
             <div class="clients__box">
               <svg class="clients__icon" width="170" height="92">
                 <use href="./images/icons.svg#icon-Logo"></use>
@@ -426,7 +416,9 @@
             >info@devstudio.com</a
           >
 
-          <a class="link-footer__page link-footer__page--footer" href="tel:+48111111111"
+          <a
+            class="link-footer__page link-footer__page--footer"
+            href="tel:+48111111111"
             >+48 111 111 111</a
           >
         </div>
@@ -488,7 +480,7 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="modal__backdrop modal__is-hidden" data-modal>
+    <div class="modal__backdrop modal__is-hidden" data-modal>
       <div class="modal__window">
         <svg class="modal__close-button" data-modal-close>
           <use href="./images/icons.svg#close-button"></use>
@@ -570,7 +562,7 @@
           </form>
         </div>
       </div>
-    </div> -->
+    </div>
     <script defer src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
