mobile menu and respons update

--- a/index.html
+++ b/index.html
@@ -38,16 +38,40 @@
           <a class="link__page" href="portfolio.html">Portfolio</a>
 
           <a class="link__page" href="#kontakt">Kontakt</a>
-          <div class="js-menu-container">
-            <a href="./index.html">Agencja</a>
-            <a href="./portfolio.html">Portfolio</a>
-            <a href="#">Kontakt</a>
-            <a href="tel:+48111111111">+48 111 111 111</a>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <button type="button" class="js-close-menu">X</button>
+          <div class="menu-container">
+            <div class="menu-wrap">
+              <a class="mobile-link" href="./index.html">Agencja</a>
+              <a class="mobile-link" href="./portfolio.html">Portfolio</a>
+              <a class="mobile-link" href="#">Kontakt</a>
+            </div>
+            <div class="menu-wrap menu-wrap--contact">
+              <a class="mobile-link mobile-link--phone" href="tel:+48111111111"
+                >+48 111 111 111</a
+              >
+              <a
+                class="mobile-link mobile-link--mail"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </div>
+            <div class="menu-wrap--socials">
+              <a class="menu-socials">Instagram</a
+              ><span class="menu-socials-line">|</span>
+              <a class="menu-socials">Twitter</a
+              ><span class="menu-socials-line">|</span>
+              <a class="menu-socials">Facebook</a
+              ><span class="menu-socials-line">|</span>
+              <a class="menu-socials">LinkedIn</a>
+            </div>
+            <svg width="24" height="24" class="mobile-closebutton close-menu">
+              <use href="./images/icons.svg#close-buttonm"></use>
+            </svg>
           </div>
+
+          <svg width="24" height="24" class="open-menu">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
         </nav>
-        <div class="js-open-menu">open</div>
 
         <div class="header__contact">
           <a class="link link--contact" href="mailto:info@devstudio.com">
@@ -480,8 +504,8 @@
         </div>
       </div>
     </footer>
-    <div class="modal__backdrop modal__is-hidden" data-modal>
-      <div class="modal__window">
+    <div class="modal modal__is-hidden" data-modal>
+      <div class="modal__container">
         <svg class="modal__close-button" data-modal-close>
           <use href="./images/icons.svg#close-button"></use>
         </svg>
