--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
 
@@ -160,14 +156,14 @@
       </section>
       <section class="whatwedo">
         <div class="whatwedo__container">
+          <h2 class="section__paragraf">Czym się zajmujemy</h2>
           <ul class="wrapper">
-            <li><h2 class="section__paragraf">Czym się zajmujemy</h2></li>
             <li class="whatwedo__box">
               <p class="whatwedo__label">aplikacje komputerowe</p>
               <figure class="whatwedo__figure">
                 <img
                   src="images/block_diagram.jpg"
-                  alt="block_diagram"
+                  alt="diagram_blokowy"
                   width="370"
                   height="294"
                 />
@@ -178,7 +174,7 @@
               <figure class="whatwedo__figure">
                 <img
                   src="images/mobileappdeveloper.jpg"
-                  alt="mobileappdeveloper"
+                  alt="programista_aplikacji"
                   width="370"
                   height="294"
                 />
@@ -189,7 +185,7 @@
               <figure class="whatwedo__figure">
                 <img
                   src="images/graphic_design.jpg"
-                  alt="graphic_designer"
+                  alt="projektowanie_grafiki"
                   width="370"
                   height="294"
                 />
@@ -200,13 +196,13 @@
       </section>
       <section class="team">
         <div class="team__container">
+          <h2 class="section__paragraf">Nasz zespół</h2>
           <ul class="wrapper">
-            <li class="section__paragraf"><h2>Nasz zespół</h2></li>
             <li class="team__box">
               <figure class="team__figure">
                 <img
                   src="images/pr.jpg"
-                  alt="produckt_designer"
+                  alt="chłop_w_czerwonej_koszuli"
                   width="450"
                   height="460"
                   class="img"
@@ -251,7 +247,7 @@
               <figure class="team__figure">
                 <img
                   src="images/frontenddeveloper.jpg"
-                  alt="frontenddeveloper"
+                  alt="blondynka_w_okularach"
                   width="450"
                   height="460"
                   class="img"
@@ -297,7 +293,7 @@
               <figure class="team__figure">
                 <img
                   src="images/marketing.jpg"
-                  alt="marketing"
+                  alt="typ_w_niebieskiej_koszuli"
                   width="450"
                   height="460"
                   class="img"
@@ -342,7 +338,7 @@
               <figure class="team__figure">
                 <img
                   src="images/ui_designer.jpg"
-                  alt="ui_designer"
+                  alt="chłop_w_czarnej_koszulce"
                   width="450"
                   height="460"
                   class="img"
@@ -521,36 +517,21 @@
               <svg class="modal-order__icons">
                 <use href="./images/icons.svg#icon-personblack"></use>
               </svg>
-              <input
-                type="text"
-                class="modal-order__input"
-                name="name"
-                placeholder="Imię"
-              />
+              <input type="text" class="modal-order__input" name="name" />
             </label>
             <p class="modal-order__paragraf">Telefon</p>
             <label class="modal-order__label">
               <svg class="modal-order__icons">
                 <use href="./images/icons.svg#icon-phoneblack"></use>
               </svg>
-              <input
-                type="tel"
-                class="modal-order__input"
-                name="phone"
-                placeholder="Telefon"
-              />
+              <input type="tel" class="modal-order__input" name="phone" />
             </label>
             <p class="modal-order__paragraf">Email</p>
             <label class="modal-order__label">
               <svg class="modal-order__icons">
                 <use href="./images/icons.svg#icon-mailblack"></use>
               </svg>
-              <input
-                type="email"
-                class="modal-order__input"
-                name="mail"
-                placeholder="E-mail"
-              />
+              <input type="email" class="modal-order__input" name="mail" />
             </label>
             <p class="modal-order__paragraf">Komentarz</p>
             <label class="modal-order__label">
